--- a/client/src/CSS/scss_partials/home/_home.scss
+++ b/client/src/CSS/scss_partials/home/_home.scss
@@ -27,13 +27,9 @@
 	// Standard background colors
 	.js-set-project-background-color-dark {
 		background-color: v.$dark-blue-teal !important;
-		/* background-color: #0096db; */
-		/* background-color: #a16161; */
 	}
 	.js-set-project-background-color-light {
 		background-color: v.$blue-teal !important;
-		/* background-color: #39b3eb; */
-		/* background-color: #c98b8b; */
 	}
 	.js-set-bug-background-color-dark {
 		background-color: v.$darker-navy-blue !important;
@@ -42,39 +38,31 @@
 		background-color: v.$light-navy-blue !important;
 	}
 
-
 	// Hover background colors
 	// Standard background colors
 	.js-set-project-background-color-with-hover {
 		background-color: v.$blue-teal !important;
-		/* background-color: #39b3eb; */
-		/* background-color: #c98b8b; */
-	}
-	.js-set-project-background-color-with-hover:hover,
-	.js-set-project-background-color-with-hover:active {
-		background-color: v.$dark-blue-teal !important;
-		/* background-color: #0096db; */
-		/* background-color: #a16161; */
+
+		&:hover,
+		&:active {
+			background-color: v.$dark-blue-teal !important;
+		}
 	}
 	.js-set-bug-background-color-with-hover {
 		background-color: v.$light-navy-blue !important;
-	}
-	.js-set-bug-background-color-with-hover:hover,
-	.js-set-bug-background-color-with-hover:active {
-		background-color: v.$darker-navy-blue !important;
-	}
 
+		&:hover,
+		&:active {
+			background-color: v.$darker-navy-blue !important;
+		}
+	}
 
 	// Border colors
 	.js-set-project-border-color-dark {
 		border-color: v.$dark-blue-teal !important;
-		/* background-color: #0096db; */
-		/* background-color: #a16161; */
 	}
 	.js-set-project-border-color-light {
 		border-color: v.$blue-teal !important;
-		/* background-color: #39b3eb; */
-		/* background-color: #c98b8b; */
 	}
 	.js-set-bug-border-color-dark {
 		border-color: v.$darker-navy-blue !important;
@@ -83,7 +71,6 @@
 		border-color: v.$light-navy-blue !important;
 	}
 
-
 	// Text and link color
 	.js-set-project-text-color {
 		color: v.$teal-link !important;
@@ -91,7 +78,6 @@
 	.js-set-bug-text-color {
 		color: v.$blue-link !important;
 	}
-
 
 	// Used for changing the background color of status-boxes
 	// ...also used to store colors in redux for bug-pie-chart
@@ -119,7 +105,6 @@
 	.js-calc-status-box-background-color-red {
 		background-color: v.$status-red !important;
 	}
-
 
 	// Used to change text color in status combo-boxes
 	.status-box-text-color-gray {
