--- a/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountSidebar.scss
@@ -51,9 +51,10 @@
 		font-style: bold;
 		text-decoration: none;
 		cursor: pointer;
-	}
-	.account-link:active,
-	.account-link:hover {
-		text-decoration: underline;
+
+		&:hover,
+		&:active {
+			text-decoration: underline;
+		}
 	}
 }
