--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemContainerCommentsBoxIndividualComment.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemContainerCommentsBoxIndividualComment.scss
@@ -19,10 +19,11 @@
 		margin-left: 10px;
 		color: gray;
 		cursor: pointer;
-	}
-	.comment__block__icon-button:hover,
-	.comment__block__icon-button:active {
-		color: black;
+
+		&:hover,
+		&:active {
+			color: black;
+		}
 	}
 
 	.comment__centering-container {
@@ -69,10 +70,11 @@
 		text-align: center;
 		font-size: 16px;
 		cursor: pointer;
-	}
-	.comment__centering-container__pair-container__cancel-button:hover,
-	.comment__centering-container__pair-container__cancel-button:active {
-		background-color: #dad9d9;
+
+		&:hover,
+		&:active {
+			background-color: #dad9d9;
+		}
 	}
 
 	.edit-comment-form-errors-container {
