--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -18,7 +18,7 @@ html, body {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 25px;
-  border: 5px solid #202024;
+  border: 5px solid black;
   background-color: white;
   padding: 25px;
   width: 500px;
@@ -65,8 +65,7 @@ html, body {
   font-size: 16px;
   cursor: pointer;
 }
-.register-login-components .form__submit:hover,
-.register-login-components .form__submit:active {
+.register-login-components .form__submit:hover, .register-login-components .form__submit:active {
   background-color: #50798b;
 }
 .register-login-components .footer {
@@ -113,14 +112,10 @@ html, body {
 .home-container .js-set-project-background-color-dark,
 .js-calc-home-container .js-set-project-background-color-dark {
   background-color: #50798b !important;
-  /* background-color: #0096db; */
-  /* background-color: #a16161; */
 }
 .home-container .js-set-project-background-color-light,
 .js-calc-home-container .js-set-project-background-color-light {
   background-color: #6691a3 !important;
-  /* background-color: #39b3eb; */
-  /* background-color: #c98b8b; */
 }
 .home-container .js-set-bug-background-color-dark,
 .js-calc-home-container .js-set-bug-background-color-dark {
@@ -133,23 +128,17 @@ html, body {
 .home-container .js-set-project-background-color-with-hover,
 .js-calc-home-container .js-set-project-background-color-with-hover {
   background-color: #6691a3 !important;
-  /* background-color: #39b3eb; */
-  /* background-color: #c98b8b; */
 }
-.home-container .js-set-project-background-color-with-hover:hover,
-.home-container .js-set-project-background-color-with-hover:active,
+.home-container .js-set-project-background-color-with-hover:hover, .home-container .js-set-project-background-color-with-hover:active,
 .js-calc-home-container .js-set-project-background-color-with-hover:hover,
 .js-calc-home-container .js-set-project-background-color-with-hover:active {
   background-color: #50798b !important;
-  /* background-color: #0096db; */
-  /* background-color: #a16161; */
 }
 .home-container .js-set-bug-background-color-with-hover,
 .js-calc-home-container .js-set-bug-background-color-with-hover {
   background-color: #4d6b8b !important;
 }
-.home-container .js-set-bug-background-color-with-hover:hover,
-.home-container .js-set-bug-background-color-with-hover:active,
+.home-container .js-set-bug-background-color-with-hover:hover, .home-container .js-set-bug-background-color-with-hover:active,
 .js-calc-home-container .js-set-bug-background-color-with-hover:hover,
 .js-calc-home-container .js-set-bug-background-color-with-hover:active {
   background-color: #3d5774 !important;
@@ -157,14 +146,10 @@ html, body {
 .home-container .js-set-project-border-color-dark,
 .js-calc-home-container .js-set-project-border-color-dark {
   border-color: #50798b !important;
-  /* background-color: #0096db; */
-  /* background-color: #a16161; */
 }
 .home-container .js-set-project-border-color-light,
 .js-calc-home-container .js-set-project-border-color-light {
   border-color: #6691a3 !important;
-  /* background-color: #39b3eb; */
-  /* background-color: #c98b8b; */
 }
 .home-container .js-set-bug-border-color-dark,
 .js-calc-home-container .js-set-bug-border-color-dark {
@@ -308,8 +293,7 @@ html, body {
   opacity: 0.4;
   cursor: pointer;
 }
-.navbar-and-other-components-container .navbar-button__close-button__text-container:hover,
-.navbar-and-other-components-container .navbar-button__close-button__text-container:active {
+.navbar-and-other-components-container .navbar-button__close-button__text-container:hover, .navbar-and-other-components-container .navbar-button__close-button__text-container:active {
   background-color: #fc1e1e;
   opacity: 1;
 }
@@ -394,8 +378,7 @@ html, body {
   text-decoration: none;
   cursor: pointer;
 }
-.account-sidebar-component .account-link:active,
-.account-sidebar-component .account-link:hover {
+.account-sidebar-component .account-link:hover, .account-sidebar-component .account-link:active {
   text-decoration: underline;
 }
 
@@ -424,9 +407,8 @@ html, body {
   cursor: pointer;
   left: 15px;
 }
-.edit-account-modal-component .back-button:hover,
-.edit-account-modal-component .back-button:active {
-  color: #000000;
+.edit-account-modal-component .back-button:hover, .edit-account-modal-component .back-button:active {
+  color: black;
 }
 .edit-account-modal-component .exit-button {
   z-index: 3;
@@ -439,9 +421,8 @@ html, body {
   cursor: pointer;
   right: 15px;
 }
-.edit-account-modal-component .exit-button:hover,
-.edit-account-modal-component .exit-button:active {
-  color: #000000;
+.edit-account-modal-component .exit-button:hover, .edit-account-modal-component .exit-button:active {
+  color: black;
 }
 .edit-account-modal-component .title {
   position: relative;
@@ -566,8 +547,7 @@ html, body {
   font-size: 16px;
   cursor: pointer;
 }
-.delete-modal-component .centered-buttons-container__delete:hover,
-.delete-modal-component .centered-buttons-container__delete:active {
+.delete-modal-component .centered-buttons-container__delete:hover, .delete-modal-component .centered-buttons-container__delete:active {
   background-color: #cc4c4c;
 }
 .delete-modal-component .centered-buttons-container__cancel {
@@ -581,8 +561,7 @@ html, body {
   font-size: 16px;
   cursor: pointer;
 }
-.delete-modal-component .centered-buttons-container__cancel:hover,
-.delete-modal-component .centered-buttons-container__cancel:active {
+.delete-modal-component .centered-buttons-container__cancel:hover, .delete-modal-component .centered-buttons-container__cancel:active {
   background-color: #dad9d9;
 }
 
@@ -917,8 +896,7 @@ html, body {
   color: gray;
   cursor: pointer;
 }
-.item-container-component .comment__block__icon-button:hover,
-.item-container-component .comment__block__icon-button:active {
+.item-container-component .comment__block__icon-button:hover, .item-container-component .comment__block__icon-button:active {
   color: black;
 }
 .item-container-component .comment__centering-container {
@@ -956,8 +934,7 @@ html, body {
   font-size: 16px;
   cursor: pointer;
 }
-.item-container-component .comment__centering-container__pair-container__cancel-button:hover,
-.item-container-component .comment__centering-container__pair-container__cancel-button:active {
+.item-container-component .comment__centering-container__pair-container__cancel-button:hover, .item-container-component .comment__centering-container__pair-container__cancel-button:active {
   background-color: #dad9d9;
 }
 .item-container-component .edit-comment-form-errors-container {
@@ -1080,7 +1057,7 @@ html, body {
   margin-top: 3px;
   border: 1px solid black;
   box-sizing: border-box;
-  background-color: #ffffff;
+  background-color: white;
   padding: 6px;
   width: 100%;
   font-size: 12px;
@@ -1143,9 +1120,8 @@ html, body {
   font-size: 16px;
   cursor: pointer;
 }
-.item-container-component .form-buttons-centered-container__cancel-button:hover,
-.item-container-component .form-buttons-centered-container__cancel-button:active {
-  background-color: #f1f0f0;
+.item-container-component .form-buttons-centered-container__cancel-button:hover, .item-container-component .form-buttons-centered-container__cancel-button:active {
+  background-color: #dad9d9;
 }
 .item-container-component .grayed-out-unclickable-label {
   color: #bfbfbf;
@@ -1188,8 +1164,7 @@ html, body {
   width: 25px;
   cursor: pointer;
 }
-.item-container-list-sidebar-component .expand-minimize-button:hover,
-.item-container-list-sidebar-component .expand-minimize-button:active,
+.item-container-list-sidebar-component .expand-minimize-button:hover, .item-container-list-sidebar-component .expand-minimize-button:active,
 .js-calc-list-sidebar-component .expand-minimize-button:hover,
 .js-calc-list-sidebar-component .expand-minimize-button:active {
   background-color: #bfbfbf;
@@ -1480,11 +1455,10 @@ html, body {
   text-align: center;
   cursor: pointer;
 }
-.top-bar-component .item-options-container__button:hover,
-.top-bar-component .item-options-container__button:active,
+.top-bar-component .item-options-container__button:hover, .top-bar-component .item-options-container__button:active,
 .js-calc-top-bar-component .item-options-container__button:hover,
 .js-calc-top-bar-component .item-options-container__button:active {
-  color: #000000;
+  color: black;
 }
 .top-bar-component .item-options-container__button__text,
 .js-calc-top-bar-component .item-options-container__button__text {
@@ -1520,8 +1494,7 @@ html, body {
   padding: 12px;
   cursor: pointer;
 }
-.top-bar-component .item-options-container__dropdown__option:hover,
-.top-bar-component .item-options-container__dropdown__option:active,
+.top-bar-component .item-options-container__dropdown__option:hover, .top-bar-component .item-options-container__dropdown__option:active,
 .js-calc-top-bar-component .item-options-container__dropdown__option:hover,
 .js-calc-top-bar-component .item-options-container__dropdown__option:active {
   background-color: #e5e5e5;
@@ -1548,11 +1521,10 @@ html, body {
   right: 20px;
   color: #757575;
 }
-.top-bar-component .x-button:hover,
-.top-bar-component .x-button:active,
+.top-bar-component .x-button:hover, .top-bar-component .x-button:active,
 .js-calc-top-bar-component .x-button:hover,
 .js-calc-top-bar-component .x-button:active {
-  color: #000000;
+  color: black;
 }
 
 .create-item-component .blurred-background {
@@ -1597,9 +1569,8 @@ html, body {
   cursor: pointer;
   right: 15px;
 }
-.create-item-component .x-button:hover,
-.create-item-component .x-button:active {
-  color: #000000;
+.create-item-component .x-button:hover, .create-item-component .x-button:active {
+  color: black;
 }
 .create-item-component .padded-container {
   padding: 0px 25px 25px 25px;
