--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -112,10 +112,12 @@ html, body {
 .home-container .js-set-project-background-color-dark,
 .js-calc-home-container .js-set-project-background-color-dark {
   background-color: #50798b !important;
+  background-color: #3d5774 !important;
 }
 .home-container .js-set-project-background-color-light,
 .js-calc-home-container .js-set-project-background-color-light {
   background-color: #6691a3 !important;
+  background-color: #4d6b8b !important;
 }
 .home-container .js-set-bug-background-color-dark,
 .js-calc-home-container .js-set-bug-background-color-dark {
@@ -128,11 +130,13 @@ html, body {
 .home-container .js-set-project-background-color-with-hover,
 .js-calc-home-container .js-set-project-background-color-with-hover {
   background-color: #6691a3 !important;
+  background-color: #4d6b8b !important;
 }
 .home-container .js-set-project-background-color-with-hover:hover, .home-container .js-set-project-background-color-with-hover:active,
 .js-calc-home-container .js-set-project-background-color-with-hover:hover,
 .js-calc-home-container .js-set-project-background-color-with-hover:active {
   background-color: #50798b !important;
+  background-color: #3d5774 !important;
 }
 .home-container .js-set-bug-background-color-with-hover,
 .js-calc-home-container .js-set-bug-background-color-with-hover {
@@ -146,10 +150,12 @@ html, body {
 .home-container .js-set-project-border-color-dark,
 .js-calc-home-container .js-set-project-border-color-dark {
   border-color: #50798b !important;
+  border-color: #3d5774 !important;
 }
 .home-container .js-set-project-border-color-light,
 .js-calc-home-container .js-set-project-border-color-light {
   border-color: #6691a3 !important;
+  border-color: #4d6b8b !important;
 }
 .home-container .js-set-bug-border-color-dark,
 .js-calc-home-container .js-set-bug-border-color-dark {
@@ -162,6 +168,7 @@ html, body {
 .home-container .js-set-project-text-color,
 .js-calc-home-container .js-set-project-text-color {
   color: #2588b3 !important;
+  color: #1658ad !important;
 }
 .home-container .js-set-bug-text-color,
 .js-calc-home-container .js-set-bug-text-color {
