--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewCommentBox.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewCommentBox.scss
@@ -1,8 +1,8 @@
 @use "../../../utils/variables" as v;
 @use "../../../utils/mixins" as m;
 
-// This file is for SCSS used only by the ItemContainerCommentBox component
-// ...SCSS shared with other components is in itemContainer.scss
+// This file is for SCSS used only by the ItemViewCommentBox component
+// ...SCSS shared with other components is in itemView.scss
 .item-container-component {
 	.form-submit-centering-container {
 		position: relative;
