--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewEditItemInfo.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewEditItemInfo.scss
@@ -1,8 +1,8 @@
 @use "../../../utils/variables" as v;
 @use "../../../utils/mixins" as m;
 
-// This file is for SCSS used only by the ItemContainerEditInfo component
-// ...SCSS shared with other components is in itemContainer.scss
+// This file is for SCSS used only by the ItemViewEditInfo component
+// ...SCSS shared with other components is in itemView.scss
 .item-container-component {
 	.name-centering-container {
 		position: relative;
@@ -54,7 +54,7 @@
 		width: v.$edit-item-name-char-counter-container-width;
 	}
 
-	// This character counter is only for name in ItemContainerEditInfo
+	// This character counter is only for name in ItemViewEditInfo
 	.name-centering-container__char-count-centering-container__name-char-counter {
 		@include m.dead-center;
 
