Made blue-link color a bit milder

--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -25,7 +25,7 @@ $navy-blue: #45607e;
 $darker-navy-blue: #3d5774;
 // Links
 /* $blue-link: #005ed8; */
-$blue-link: #1658ad;
+$blue-link: #22579c;
 $teal-link: #2588b3;
 $red-link: #f34242;
 // Reds
