--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -69,6 +69,7 @@ $edit-item-project-bugs-stats-item-box-height: 320px;
 //=========
 // Widths
 //=========
+$navbar-button-arrow-width:($navbar-height / 2);
 $edit-account-modal-width: 540px;
 $filter-button-width: 90px;
 $list-table-min-width: 1100px;
