--- a/client/src/CSS/scss_partials/home/_navbar.scss
+++ b/client/src/CSS/scss_partials/home/_navbar.scss
@@ -50,7 +50,7 @@
 	.navbar-button__outer-text-container__inner-text-container {
 		@include m.stop-text-selection();
 
-		margin: 18px 4px 0px 16px;
+		margin: 18px 8px 0px v.$navbar-button-text-container-margin-left;
 		font-family: Verdana, Geneva, sans-serif;
 		font-size: 20px;
 		color: white;
@@ -59,6 +59,11 @@
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
+	}
+
+	.navbar-button__outer-text-container__inner-text-container--right {
+		// Same as margin-left for unmoddified version
+		margin-right: v.$navbar-button-text-container-margin-left;
 	}
 
 	.navbar-button__outer-text-container__inner-text-container--item-name {
@@ -77,10 +82,11 @@
 		// Must have higher z-index than border-arrow below
 		z-index: 2;
 		position: absolute;
+		top: -1px;
 		left: 0px;
-		border-top: v.$navbar-button-arrow-width solid transparent;
-		border-bottom: v.$navbar-button-arrow-width solid transparent;
-		border-left: v.$navbar-button-arrow-width solid gray;
+		border-top: v.$navbar-button-arrow-width + 2 solid transparent;
+		border-bottom: v.$navbar-button-arrow-width + 2 solid transparent;
+		border-left: v.$navbar-button-arrow-width + 2 solid gray;
 		height: 0;
 		width: 0;
 	}
@@ -89,37 +95,32 @@
 		// Must have higher z-index of navbar-button
 		z-index: 1;
 		position: absolute;
+		top: -1px;
 		left: 1px;
-		border-top: v.$navbar-button-arrow-width solid transparent;
-		border-bottom: v.$navbar-button-arrow-width solid transparent;
-		border-left: v.$navbar-button-arrow-width solid black;
+		border-top: v.$navbar-button-arrow-width + 2 solid transparent;
+		border-bottom: v.$navbar-button-arrow-width + 2 solid transparent;
+		border-left: v.$navbar-button-arrow-width + 2 solid black;
 		height: 0;
 		width: 0;
 	}
 
-	.navbar-button__outer-text-container__close-button__text-container {
+	.navbar-button__arrow-container__border-arrow__close-button {
+		@include m.stop-text-selection();
+		//@include m.dead-center();
+
 		position: absolute;
-		top: 5px;
-		right: 5px;
-		background-color: v.$light-red;
-		border-radius: 100%;
-		height: 16px;
-		width: 16px;
-		opacity: 0.4;
+		top: -9px;
+		left: -32px;
+
+		color: silver;
+		opacity: 0.6;
+		font-size: 18px;
 		cursor: pointer;
 
 		&:hover,
 		&:active {
-			background-color: v.$bright-red;
 			opacity: 1;
+			color: v.$bright-red;
 		}
-	}
-
-	.navbar-button__outer-text-container__close-button__text-container__icon {
-		@include m.stop-text-selection();
-		@include m.dead-center();
-
-		color: white;
-		font-size: 12px;
 	}
 }
