--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -93,6 +93,7 @@ $item-search-bar-left: 15px;
 //=========
 // Margins
 //=========
+$navbar-button-text-container-margin-left: 16px;
 $form-input-margin-bottom: 10px;
 $create-item-sidebar-text-input-margin-top: 2px;
 $display-item-field-margin-left: 11px;
