--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -290,7 +290,7 @@ html, body {
   user-select: none;
   /* Non-prefixed version, currently
   supported by Chrome, Edge, Opera and Firefox */
-  margin: 18px 4px 0px 16px;
+  margin: 18px 8px 0px 16px;
   font-family: Verdana, Geneva, sans-serif;
   font-size: 20px;
   color: white;
@@ -298,6 +298,9 @@ html, body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+.navbar-and-other-components-container .navbar-button__outer-text-container__inner-text-container--right {
+  margin-right: 16px;
 }
 .navbar-and-other-components-container .navbar-button__outer-text-container__inner-text-container--item-name {
   color: #ffff00;
@@ -312,39 +315,26 @@ html, body {
 .navbar-and-other-components-container .navbar-button__arrow-container__arrow {
   z-index: 2;
   position: absolute;
+  top: -1px;
   left: 0px;
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;
-  border-left: 30px solid gray;
+  border-top: 32px solid transparent;
+  border-bottom: 32px solid transparent;
+  border-left: 32px solid gray;
   height: 0;
   width: 0;
 }
 .navbar-and-other-components-container .navbar-button__arrow-container__border-arrow {
   z-index: 1;
   position: absolute;
+  top: -1px;
   left: 1px;
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;
-  border-left: 30px solid black;
+  border-top: 32px solid transparent;
+  border-bottom: 32px solid transparent;
+  border-left: 32px solid black;
   height: 0;
   width: 0;
 }
-.navbar-and-other-components-container .navbar-button__outer-text-container__close-button__text-container {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  background-color: #cf8c8c;
-  border-radius: 100%;
-  height: 16px;
-  width: 16px;
-  opacity: 0.4;
-  cursor: pointer;
-}
-.navbar-and-other-components-container .navbar-button__outer-text-container__close-button__text-container:hover, .navbar-and-other-components-container .navbar-button__outer-text-container__close-button__text-container:active {
-  background-color: #fc1e1e;
-  opacity: 1;
-}
-.navbar-and-other-components-container .navbar-button__outer-text-container__close-button__text-container__icon {
+.navbar-and-other-components-container .navbar-button__arrow-container__border-arrow__close-button {
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
@@ -359,11 +349,16 @@ html, body {
   /* Non-prefixed version, currently
   supported by Chrome, Edge, Opera and Firefox */
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-size: 12px;
+  top: -9px;
+  left: -32px;
+  color: silver;
+  opacity: 0.6;
+  font-size: 18px;
+  cursor: pointer;
+}
+.navbar-and-other-components-container .navbar-button__arrow-container__border-arrow__close-button:hover, .navbar-and-other-components-container .navbar-button__arrow-container__border-arrow__close-button:active {
+  opacity: 1;
+  color: #fc1e1e;
 }
 
 .account-modals-blurred-background {
