--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -6,7 +6,8 @@ $light-blue-teal: #8ba8b3;
 $blue-teal: #6691a3;
 $dark-blue-teal: #50798b;
 // Grays
-$very-light-gray: #f5f5f5;
+$very-light-gray: #f8f8f8;
+$lighter-gray: #f5f5f5;
 $light-gray: #e5e5e5;
 $less-light-gray: #dddddd;
 $medium-light-gray: #bfbfbf;
