--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
@@ -46,9 +46,9 @@
 		// ...the scss for the colors assigned are in home.scss
 		border: v.$list-search-bar-border-width solid black;
 		padding: 0px v.$list-search-bar-padding 0px v.$list-search-bar-padding;
-		height: v.$list-search-bar-height;
+		height: v.$list-item-search-bar-height;
 		width: v.$item-search-bar-width - v.$list-item-search-bar-button-width;
-		font-size: 14px;
+		font-size: v.$list-item-search-bar-font-size;
 	}
 
 	.outer-search-container__search-bar-button {
@@ -59,7 +59,7 @@
 		// ...assigning a different background color to this element.
 		// ...the scss for the colors assigned are in home.scss
 		background-color: black;
-		height: v.$list-search-bar-height;
+		height: v.$list-item-search-bar-height;
 		width: v.$list-item-search-bar-button-width;
 		cursor: pointer;
 	}
@@ -67,6 +67,7 @@
 	.outer-search-container__search-bar-button__icon {
 		@include m.dead-center();
 		color: white;
+		font-size: v.$list-item-search-bar-button-icon-font-size;
 	}
 
 	.filter-container,
@@ -80,16 +81,21 @@
 	.js-calc-filter-container__button {
 		@include m.stop-text-selection();
 
+		// Must be border-box because the zoom on the webpage can resize the border otherwise
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+
 		// Must be more than filter-container__content-dropdown
 		// ...so its top border can be covered to make the two containers look like one
 		z-index: 1;
 		position: absolute;
-		top: 12px;
+		top: 9px;
 		border: 1px solid black;
 		background-color: white;
 		height: v.$search-filter-sort-bar-button-height;
 		width: v.$filter-button-width;
-		font-size: 16px;
+		font-size: v.$top-bar-filter-button-font-size;
 		text-align: center;
 		cursor: pointer;
 	}
@@ -116,7 +122,7 @@
 
 	.filter-container__content-dropdown {
 		position: absolute;
-		top: 58px;
+		top: 53px;
 		border: 3px solid black;
 		background-color: white;
 		height: 200px;
