--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -244,39 +244,39 @@ html, body {
   color: #d14242 !important;
 }
 
-.navbar-and-other-components-container {
+.navbar-container {
   position: fixed;
   width: 100%;
   top: 0;
 }
-.navbar-and-other-components-container .navbar-component {
+.navbar-container .navbar-component {
   background-color: black;
-  height: 60px;
+  height: 56px;
   width: 100%;
 }
-.navbar-and-other-components-container .navbar-button {
+.navbar-container .navbar-button {
   position: relative;
   float: left;
   background-color: black;
-  height: 60px;
+  height: 56px;
 }
-.navbar-and-other-components-container .navbar-button--invisible {
+.navbar-container .navbar-button--invisible {
   visibility: hidden;
 }
-.navbar-and-other-components-container .navbar-button--right {
+.navbar-container .navbar-button--right {
   position: absolute;
   right: 0;
 }
-.navbar-and-other-components-container .navbar-button--arrow-buffered {
-  margin-left: -31px;
-  padding-left: 31px;
+.navbar-container .navbar-button--arrow-buffered {
+  margin-left: -29px;
+  padding-left: 29px;
 }
-.navbar-and-other-components-container .navbar-button__outer-text-container {
+.navbar-container .navbar-button__outer-text-container {
   position: relative;
   float: left;
-  height: 60px;
+  height: 56px;
 }
-.navbar-and-other-components-container .navbar-button__outer-text-container__inner-text-container {
+.navbar-container .navbar-button__outer-text-container__inner-text-container {
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
@@ -290,52 +290,52 @@ html, body {
   user-select: none;
   /* Non-prefixed version, currently
   supported by Chrome, Edge, Opera and Firefox */
-  margin: 18px 10px 0px 16px;
+  margin: 18px 10px 0px 14px;
   font-family: Verdana, Geneva, sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   color: white;
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.navbar-and-other-components-container .navbar-button__outer-text-container__inner-text-container--right {
-  margin-right: 16px;
+.navbar-container .navbar-button__outer-text-container__inner-text-container--right {
+  margin-right: 14px;
   margin-left: 10px;
 }
-.navbar-and-other-components-container .navbar-button__outer-text-container__inner-text-container--item-name {
+.navbar-container .navbar-button__outer-text-container__inner-text-container--item-name {
   color: #ffff00;
   font-style: italic;
 }
-.navbar-and-other-components-container .navbar-button__arrow-container {
+.navbar-container .navbar-button__arrow-container {
   position: relative;
   float: left;
-  height: 60px;
-  width: 32px;
+  height: 56px;
+  width: 30px;
 }
-.navbar-and-other-components-container .navbar-button__arrow-container__arrow {
+.navbar-container .navbar-button__arrow-container__arrow {
   z-index: 2;
   position: absolute;
   top: -1px;
   left: 0px;
-  border-top: 32px solid transparent;
-  border-bottom: 32px solid transparent;
-  border-left: 32px solid gray;
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;
+  border-left: 30px solid gray;
   height: 0;
   width: 0;
 }
-.navbar-and-other-components-container .navbar-button__arrow-container__border-arrow {
+.navbar-container .navbar-button__arrow-container__border-arrow {
   z-index: 1;
   position: absolute;
   top: -1px;
   left: 1px;
-  border-top: 32px solid transparent;
-  border-bottom: 32px solid transparent;
-  border-left: 32px solid black;
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;
+  border-left: 30px solid black;
   height: 0;
   width: 0;
 }
-.navbar-and-other-components-container .navbar-button__arrow-container__border-arrow__close-button {
+.navbar-container .navbar-button__arrow-container__border-arrow__close-button {
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
@@ -357,7 +357,7 @@ html, body {
   font-size: 18px;
   cursor: pointer;
 }
-.navbar-and-other-components-container .navbar-button__arrow-container__border-arrow__close-button:hover, .navbar-and-other-components-container .navbar-button__arrow-container__border-arrow__close-button:active {
+.navbar-container .navbar-button__arrow-container__border-arrow__close-button:hover, .navbar-container .navbar-button__arrow-container__border-arrow__close-button:active {
   opacity: 1;
   color: #fc1e1e;
 }
@@ -366,7 +366,7 @@ html, body {
   z-index: 2;
   position: fixed;
   left: 0;
-  top: 60px;
+  top: 56px;
   background-color: black;
   opacity: 0.5;
   height: 100vh;
@@ -376,7 +376,7 @@ html, body {
 .account-sidebar-component .sidebar-container {
   z-index: 2;
   position: fixed;
-  top: 60px;
+  top: 56px;
   right: 0;
   margin-bottom: 20px;
   border: 5px solid black;
@@ -534,7 +534,7 @@ html, body {
 .delete-modal-component .blurred-background {
   z-index: 1;
   position: fixed;
-  top: 60px;
+  top: 56px;
   left: 0px;
   background-color: black;
   opacity: 0.5;
@@ -605,7 +605,7 @@ html, body {
 .item-container-component .item-container,
 .js-calc-item-container-component .item-container {
   position: fixed;
-  top: 113px;
+  top: 103px;
   left: 0px;
   background-color: white;
   height: 90vh;
@@ -1192,7 +1192,7 @@ html, body {
 .js-calc-list-sidebar-component .expand-minimize-button {
   z-index: 1;
   position: fixed;
-  top: 128px;
+  top: 118px;
   left: 277px;
   border: 2px solid black;
   border-left: none;
@@ -1226,7 +1226,7 @@ html, body {
 .js-calc-list-sidebar-component .list-sidebar {
   z-index: 1;
   position: fixed;
-  top: 113px;
+  top: 103px;
   left: 0px;
   border-right: 2px solid black;
   background-color: #ffffff;
@@ -1305,10 +1305,10 @@ html, body {
 .js-calc-top-bar-component {
   z-index: 1;
   position: fixed;
-  top: 60px;
+  top: 56px;
   border-bottom: 1px solid black;
   background-color: #e5e5e5;
-  height: 52px;
+  height: 46px;
   /* height: v.$search-filter-sort-bar-height; */
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
@@ -1341,8 +1341,8 @@ html, body {
   outline: none;
   border: 2px solid black;
   padding: 0px 8px 0px 8px;
-  height: 32px;
-  width: 248px;
+  height: 28px;
+  width: 252px;
   font-size: 14px;
 }
 .top-bar-component .outer-search-container__search-bar-button,
@@ -1350,8 +1350,8 @@ html, body {
   position: absolute;
   display: inline-block;
   background-color: black;
-  height: 32px;
-  width: 42px;
+  height: 28px;
+  width: 38px;
   cursor: pointer;
 }
 .top-bar-component .outer-search-container__search-bar-button__icon,
@@ -1361,6 +1361,7 @@ html, body {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  font-size: 14px;
 }
 .top-bar-component .filter-container,
 .top-bar-component .js-calc-filter-container,
@@ -1387,14 +1388,17 @@ html, body {
   user-select: none;
   /* Non-prefixed version, currently
   supported by Chrome, Edge, Opera and Firefox */
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   z-index: 1;
   position: absolute;
-  top: 12px;
+  top: 9px;
   border: 1px solid black;
   background-color: white;
   height: 28px;
   width: 90px;
-  font-size: 16px;
+  font-size: 14px;
   text-align: center;
   cursor: pointer;
 }
@@ -1421,7 +1425,7 @@ html, body {
 .top-bar-component .filter-container__content-dropdown,
 .js-calc-top-bar-component .filter-container__content-dropdown {
   position: absolute;
-  top: 58px;
+  top: 53px;
   border: 3px solid black;
   background-color: white;
   height: 200px;
@@ -1567,7 +1571,7 @@ html, body {
 .create-item-component .blurred-background {
   z-index: 1;
   position: absolute;
-  top: 60px;
+  top: 56px;
   background-color: black;
   opacity: 0.5;
   height: 100vh;
@@ -1576,7 +1580,7 @@ html, body {
 .create-item-component .create-item-sidebar {
   z-index: 1;
   position: fixed;
-  top: 60px;
+  top: 56px;
   margin-bottom: 20px;
   border: 5px solid black;
   border-top: none;
@@ -1720,12 +1724,12 @@ html, body {
 .js-calc-search-filter-sort-component {
   z-index: 1;
   position: fixed;
-  top: 60px;
+  top: 56px;
   border: 1px solid black;
   border-left: none;
   border-right: none;
   background-color: #e5e5e5;
-  height: 52px;
+  height: 46px;
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -1733,7 +1737,7 @@ html, body {
 .js-calc-search-filter-sort-component .centering-container {
   position: relative;
   float: left;
-  height: 52px;
+  height: 46px;
   width: 152px;
 }
 .search-filter-sort-component .centering-container__new-item-button,
@@ -1754,12 +1758,15 @@ html, body {
   position: absolute;
   top: 50%;
   transform: translate(0%, -50%);
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   left: 30px;
   border: 1px solid black;
   background-color: white;
   height: 28px;
   width: 110px;
-  font-size: 16px;
+  font-size: 14px;
   text-align: center;
   cursor: pointer;
 }
@@ -1797,8 +1804,8 @@ html, body {
   outline: none;
   border: 2px solid black;
   padding: 0px 8px 0px 8px;
-  height: 32px;
-  line-height: 32px;
+  height: 28px;
+  line-height: 28px;
   width: 100%;
   font-size: 14px;
 }
@@ -1808,8 +1815,8 @@ html, body {
   display: inline-block;
   margin-left: -1px;
   background-color: black;
-  height: 32px;
-  width: 42px;
+  height: 28px;
+  width: 38px;
   cursor: pointer;
 }
 .search-filter-sort-component .centering-container__search-group-container__search-bar-button__icon,
@@ -1819,6 +1826,7 @@ html, body {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  font-size: 14px;
 }
 .search-filter-sort-component .filter-area-container,
 .js-calc-search-filter-sort-component .filter-area-container {
@@ -1841,15 +1849,18 @@ html, body {
   user-select: none;
   /* Non-prefixed version, currently
   supported by Chrome, Edge, Opera and Firefox */
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   z-index: 1;
   position: absolute;
-  top: 12px;
+  top: 9px;
   right: 30px;
   border: 1px solid black;
   background-color: white;
   height: 28px;
   width: 90px;
-  font-size: 16px;
+  font-size: 14px;
   text-align: center;
   cursor: pointer;
 }
@@ -1858,7 +1869,7 @@ html, body {
   margin: -2px -2px 0px;
   border-width: 3px;
   border-bottom: none;
-  height: 54px;
+  height: 48px;
 }
 .search-filter-sort-component .filter-area-container__button__text,
 .js-calc-search-filter-sort-component .filter-area-container__button__text {
@@ -1877,7 +1888,7 @@ html, body {
 .js-calc-search-filter-sort-component .filter-area-container__content-dropdown {
   position: absolute;
   /* top: 41px; */
-  top: 64px;
+  top: 53px;
   right: 28px;
   border: 3px solid black;
   background-color: white;
@@ -1930,7 +1941,7 @@ html, body {
 .search-filter-sort-component .create-item-message-container,
 .js-calc-search-filter-sort-component .create-item-message-container {
   position: absolute;
-  top: 62px;
+  top: 56px;
   left: 95px;
 }
 .search-filter-sort-component .create-item-message-container__arrow-head,
@@ -1977,7 +1988,7 @@ html, body {
 .list-table-component,
 .js-calc-list-table-component {
   position: fixed;
-  top: 113px;
+  top: 103px;
   left: 0px;
   background-color: #ffffff;
   height: 90vh;
