--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -59,6 +59,7 @@ $edit-account-modal-height: 480px;
 $search-filter-sort-bar-height: 46px;
 $search-filter-sort-bar-button-height: 28px;
 $list-item-search-bar-height: 28px;
+$filter-dropdown-content-container-height: 200px;
 $list-item-table-row-height: 50px;
 $status-box-height: 27px;
 $create-item-sidebar-height: 700px;
@@ -74,6 +75,7 @@ $navbar-button-arrow-width:($navbar-height / 2);
 $edit-account-modal-width: 540px;
 $list-item-search-bar-button-width: $list-item-search-bar-height + 10;
 $filter-button-width: 90px;
+$filter-dropdown-content-container-width: 280px;
 $list-table-min-width: 1100px;
 $list-table-item-name-width: 250px;
 $status-box-width: 110px;
@@ -129,6 +131,7 @@ $list-item-search-bar-font-size: 14px;
 $list-item-search-bar-button-icon-font-size: 14px;
 $search-filter-sort-bar-button-font-size: 14px;
 $top-bar-filter-button-font-size: $search-filter-sort-bar-button-font-size;
+$filter-dropdown-content-font-size: 14px;
 $list-container-empty-list-message-font-size: 32px;
 $item-container-name-font-size: 28px;
 $create-item-sidebar-label-font-size: 15px;
