--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewSearchFilterSortBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewSearchFilterSortBar.scss
@@ -163,8 +163,8 @@
 		right: 28px;
 		border: 3px solid black;
 		background-color: white;
-		height: 200px;
-		width: 330px;
+		height: v.$filter-dropdown-content-container-height;
+		width: v.$filter-dropdown-content-container-width;
 		cursor: default;
 		// Made visible using JS
 		visibility: hidden;
@@ -182,6 +182,7 @@
 		float: left;
 		margin: 15px 0px 5px 20px;
 		text-align: center;
+		font-size: v.$filter-dropdown-content-font-size;
 	}
 
 	.filter-area-container__content-dropdown__content--right {
