--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -1429,7 +1429,7 @@ html, body {
   border: 3px solid black;
   background-color: white;
   height: 200px;
-  width: 330px;
+  width: 280px;
   cursor: default;
   visibility: hidden;
 }
@@ -1446,6 +1446,7 @@ html, body {
   float: left;
   margin: 15px 0px 5px 20px;
   text-align: center;
+  font-size: 14px;
 }
 .top-bar-component .filter-container__content-dropdown__content--right,
 .js-calc-top-bar-component .filter-container__content-dropdown__content--right {
@@ -1893,7 +1894,7 @@ html, body {
   border: 3px solid black;
   background-color: white;
   height: 200px;
-  width: 330px;
+  width: 280px;
   cursor: default;
   visibility: hidden;
 }
@@ -1910,6 +1911,7 @@ html, body {
   float: left;
   margin: 15px 0px 5px 20px;
   text-align: center;
+  font-size: 14px;
 }
 .search-filter-sort-component .filter-area-container__content-dropdown__content--right,
 .js-calc-search-filter-sort-component .filter-area-container__content-dropdown__content--right {
